--- a/app/views/notes/index.html.haml
+++ b/app/views/notes/index.html.haml
@@ -1,4 +1,6 @@
 - @notes.each do |note|
-    %h2= note.title
+    %h2= link_to note.title, note
     %p= time_ago_in_words(note.created_at)
     %p= note.content
+
+= link_to "New note", new_note_path    
