--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,35 +1,53 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="container" style="margin-top: 50px">
+    <div class="card">
+        <div class="card-body">
+            <h1 class="card-title"><%= t('registration.profile_details') %>: <%= resource_name.to_s.humanize %></h1>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+            <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+            <%= render "devise/shared/error_messages", resource: resource %>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
-    <% end %>
+            <div class="form-group">
+                <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control form-control-lg", placeholder: "Email" %>
+            </div>
 
-    <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
-                required: true,
-                input_html: { autocomplete: "current-password" } %>
-  </div>
+            <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+            <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+            <% end %>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
-  </div>
-<% end %>
 
-<h3>Cancel my account</h3>
+            <div class="form-group">
+                <%= f.label t('registration.password') %> <i>(<%= t('registration.leave_blank') %>)</i><br />
+                <%= f.password_field :password, autocomplete: "new-password", class: "form-control form-control-lg" %>
+                <% if @minimum_password_length %>
+                <br />
+                <em><%= @minimum_password_length %> <%= t('registration.min_chars') %></em>
+                <% end %>
+            </div>
 
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+            <div class="form-group">
+                <%= f.label t('registration.password_confirmation') %><br />
+                <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control form-control-lg" %>
+            </div>
 
-<%= link_to "Back", :back %>
+            <div class="form-group">
+                <%= f.label t('registration.current_password') %> <i>(<%= t('registration.we_need_your_current_password') %>)</i><br />
+                <%= f.password_field :current_password, autocomplete: "current-password", class: "form-control form-control-lg" %>
+            </div>
+
+            <div class="actions">
+                <%= f.submit t('registration.update'), class: "btn btn-primary" %>
+            </div>
+            <% end %>
+
+
+            <h3><%= t('registration.cancel_my_account') %></h3>
+
+            <p> <%= t('registration.unhappy') %> <%= button_to t('registration.cancel'), registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-danger" %></p>
+
+            <%= link_to t('registration.back'), :back, class: "btn btn-info", style: "color:white" %>
+
+
+        </div>
+    </div>
+</div>
