--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,25 +1,34 @@
-<h2>Sign up</h2>
+<div class="container" style="margin-top: 50px">
+    <div class="card">
+        <div class="card-body">
+            <h1 class="card-title">Register</h1>
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= f.error_notification %>
 
-  <div class="form-inputs">
-    <%= f.input :email,
-                required: true,
-                autofocus: true,
-                input_html: { autocomplete: "email" }%>
-    <%= f.input :password,
-                required: true,
-                hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length),
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: true,
-                input_html: { autocomplete: "new-password" } %>
-  </div>
+            <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+            <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="form-actions">
-    <%= f.button :submit, "Sign up" %>
-  </div>
-<% end %>
+            <div class="form-group">
+                <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control form-control-lg", placeholder: "Email" %>
+            </div>
 
-<%= render "devise/shared/links" %>
+            <div class="form-group">
+                <% if @minimum_password_length %>
+                <em>(<%= @minimum_password_length %> characters minimum)</em>
+                <% end %><br />
+                <%= f.password_field :password, autocomplete: "new-password", class: "form-control form-control-lg", placeholder: t('registration.password')  %>
+            </div>
+
+            <div class="form-group">
+                <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control form-control-lg", placeholder: t('registration.password_confirmation') %>
+            </div>
+
+            <div class="actions">
+                <%= f.submit "Register", class: "btn btn-primary" %>
+            </div>
+
+            <%= render "devise/shared/links" %>
+            <% end %>
+
+        </div>
+    </div>
+</div>
