--- a/app/views/notes/_form.html.haml
+++ b/app/views/notes/_form.html.haml
@@ -1,4 +1,13 @@
-= simple_form_for @note do |f|
-    = f.input :title
-    = f.input :content
-    = f.button :submit
+.form-group
+    = simple_form_for @note do |f|
+        - if @note.errors.any?
+            %div#error-explanation
+                %h2= pluralize(@note.errors.count, "error")
+                %ul
+                    - @note.errors.full_messages.each do |message|
+                        %li= message
+        .form-group
+            = f.text_field :title, class: "form-control form-control-lg", placeholder: t('notes.title')
+        .form-group
+            = f.text_area :content, class: "form-control form-control-lg", placeholder: t('notes.description')
+        = f.submit t('forms.submit'), class: "btn btn-primary"
