--- a/app/views/notes/new.html.haml
+++ b/app/views/notes/new.html.haml
@@ -1,5 +1,7 @@
-%h1 Add a new note
-
-= render 'form'
-
-= link_to "Back", notes_path
+.container
+    .card
+        .card-body
+            %h1.card-title= t('notes.new_note')
+            = render 'form'
+            = link_to notes_path, class: "btn btn-info", style: "color:white" do
+                %i.fa.fa-undo
